--- a/nav.html
+++ b/nav.html
@@ -28,6 +28,7 @@
             <a href="https://script.google.com/macros/s/AKfycbyZWI6YLQ9ng5_J2w9Ja3aaSMePIr0yoN_T3pHZnG-hj_tSel0_osba7n85c86QRYZg/exec">物理史小測驗</a>
             <a href="Competency.html">高中物理素養題</a>
             <a href="https://script.google.com/macros/s/AKfycbyEp8Au3N-jP5suw_9Y43fRSRuCLUeApICyc0cQQhM94PA8CyGgKhp0hsfVyPy3r28y/exec">AI素養題產生器</a>
+            <a href="https://script.google.com/macros/s/AKfycbyZ_Y6EklQmNQWjso9Dj4hOdrJgrgXWSnJruCkr8Y_QzjjEcDEu4rYsSGRa5svSrIT2/exec">課堂即時小考</a>
             <a href="Ttest.html">國中技藝競賽題庫</a>
           </div>
         </li>
