--- a/Ohtaigi.html
+++ b/Ohtaigi.html
@@ -291,6 +291,7 @@
           <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
           <li><a href="https://twbangga.moe.edu.tw/animation/84E43C2D-7AA4-F011-BC9A-005056B2D58D">台語動畫</a></li>
           <li><a href="https://guidephy.github.io/taigitest.html">台語拼音聽寫測驗</a></li>
+          <li><a href="https://drive.google.com/file/d/1HG22dckl5NvtjpucLwOgSHN7GKGrY0V0/view?usp=sharing">十萬個為什麼學習單</a></li>
           <li><a href="https://tycedu.padlet.org/tyc1255/padlet-szlkey1zp65yljaj">外送補充教材</a></li>
           <li><a href="https://www.canva.com/design/DAG4cYujTyM/atpJGDmmU1XRYwRiKrzIew/view?utm_content=DAG4cYujTyM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h65b4e83e18">上課手機使用規定</a></li>
                 
