--- a/physics.html
+++ b/physics.html
@@ -229,8 +229,7 @@
 <div>
   <iframe width="640" height="360" src="https://www.youtube.com/embed/Iuv6hY6zsd0?si=VUOv-D0ym_Kp3wk3&amp;start=270" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  </div>
-      <br> 
-      <p>影片:</><a href="https://youtube.com/shorts/9A5ZA6q0l9o?si=voc-QakMIfCkAeyN" target="_blank">繩的干涉>SX>
+      <p>影片:</p><a href="https://youtube.com/shorts/9A5ZA6q0l9o?si=voc-QakMIfCkAeyN" target="_blank">繩的干涉</a>
 <br> 
 <br><br> 
 
@@ -622,6 +621,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
