--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -82,8 +82,8 @@
             { 
                 page: 1, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXfInqYwHmp64vilu15edQ82Tv-GKdd8R-sAEhw2KI4dnEfetQ2zpOFt45DT8yLm4qe4_tjD3Ta6ZuHauW_KXsJmDmhVPh28tVuRwP4evdfh7DHcDdzUMSI263dzzIfVNA?key=m9JcCzJQtFRtfPvlNcMUZw",
-                english: "Hello! Let’s start today’s lesson. Today, we are going to talk about electromagnetic induction. It is a very abstract concept, so some of you may be thinking, “Why are we learning this?” But it is very important in our daily life.", 
-                chinese: "大家好！讓我們開始今天的課程。今天我們要談談電磁感應。這是一個非常抽象的概念，所以你們中有些人可能會想：「為什麼我們要學這個？」但它在我們的日常生活中非常重要。" 
+                english: "Hello! Let’s start today’s lesson. Today, we are going to talk about electromagnetic induction. It is a very abstract concept,  But it is very important in our daily life.", 
+                chinese: "大家好！讓我們開始今天的課程。今天我們要談談電磁感應。這是一個非常抽象的概念，但它在我們的日常生活中非常重要。" 
             },
             { 
                 page: 2, 
