--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -160,7 +160,8 @@
             { 
                 page: 14, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXehBVE8zV1r4g3B-t_s4y9fTJUqcX5an35RN3y0RqHruWrDkGnKm_pGkNxrBAGphgFarFhsGbIu82FT1A85T2tXEBT6O5GfVZHnidSVwJco_KccyqMYCqEVVuoPoXPCyhQ?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "So let’s go back to the question we asked before. The answer is the windmill rotates to generate induced current. So we also call it a wind turbine because it generate electricity.", 
+                english: "So let’s go back to the question we asked before. The answer is the windmill rotates to generate induced current. This windmill has a motor.
+The correct word is turbine.So usually we call it a wind turbine.", 
                 chinese: "所以讓我們回到之前問的問題。答案是風車旋轉產生感應電流。所以我們也稱它為風力發電機，因為它能發電。" 
             },
             { 
