--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -130,7 +130,7 @@
             { 
                 page: 9, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXe5XfBOVhM9xuvLMPKQ7WNbCdfTZdThB1WXYLDy_DJ0Gf7yTxpHcYMHfsQ2ezObA5F8Ka3Hi1YaP2BwVxMMhDbTA6zkgXkz8f0cBsp_W9zBuFkczUajqOnZcKF3xmqcYw?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "You can see it in the diagram. Just like what was said, the battery provides electric current, so the LED gets electricity and lights up.", 
+                english: "You can see it in the diagram. Just like what was said, the battery provides electric current, so the LED gets electricity and lights up. and In physics, we often simplify “electric current” to “current.”", 
                 chinese: "你可以從圖表中看到。就像剛才說的，電池提供電流，所以 LED 得到電並亮了起來。" 
             },
             { 
