--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -172,7 +172,7 @@
             { 
                 page: 16, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXdVp4x0hofN0HgXw1S72ljytl_-Ovj-D-paj7KWjkfrkhkWMc4FlO6uicgLXQtH2N10GdJHQ7Aq8TAAmbHhXtZsoGS5KSfQxhm_t7KJy0BWNdyKZoWg_rmoJjJY39dl--o?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "I’d like you to do a simulation experiment and figure it out. Now, please take out your phone or tablet. Scan the QR code on the screen. You will see a simulation. You can try different things in this simulation. Observe if there is induced current in the coil, and answer the questions on the worksheet.", 
+                english: "I’d like you to do a simulation experiment and figure it out. Now, please take out your phone or tablet. Scan the QR code on the screen. You will see a simulation. You can try different things in this simulation. You can show or hide the magnetic field lines of the magnet. Observe if there is induced current in the coil, and answer the questions on the worksheet.", 
                 chinese: "現在，請拿出你的手機或平板。掃描螢幕上的 QR code。你會看到一個模擬實驗。你可以在這個模擬中嘗試不同的操作。觀察線圈中是否有感應電流，並回答工作表上的問題。" 
             },
             { 
