--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -202,7 +202,7 @@
             { 
                 page: 21, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXdEVr6jzqTKGUkbrOrPiy70ZH3_OY4YKNYydPzZDwpN6vH91Fb5nksDNG0p2QgQLIEXSHqFqa65_oDL_fHJEfsQZyvNo7yteD0B-l0Zdsz5w4ZYX5emY-CcV2PXj9YX5A?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "Now, we focus on the first one. We will discuss the others later.", 
+                english: "For now, we will focus on the first and second points. We will discuss the third point next time.", 
                 chinese: "現在，我們先專注於第一個。其他的我們稍後再討論。" 
             },
             { 
