--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -196,7 +196,7 @@
             { 
                 page: 20, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXfJUeU5C4ZmKZeqXxcIcqtR76GiAbY-RtLgeIHnKzf9GjbxQabZeKk4BpK1FYeUxWRa2XO6qRRPD0xOMJ89WTU-0Gqe8rYikajqQAwGIaqrH0MNgFDFkud4GhjhYPmjxU0?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "Let’s look at our observations. We can see three key points.", 
+                english: "From our discussion, we can get three main conclusions.", 
                 chinese: "讓我們看看我們的觀察結果。我們可以看到三個重點。" 
             },
             { 
