--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -184,13 +184,13 @@
             { 
                 page: 18, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXdAncKoOGT8RN9HqL42QIzagsaBkuf25kHCZyiBXKewCdfPOBOxfhDDPjQOqdgUU3bfvqunA0ARdG_vbJZ-giHmTERDKr9wS3fWLi59K7K0htEIhM_Jzk644kkHmgALdg?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "Discuss your observations with your group. Talk about what you found. You have three minutes.", 
+                english: "Discuss your observations with your group. Talk about what you found. Then, after two minutes, each group shares one idea.", 
                 chinese: "與小組討論你的觀察結果。談談你的發現。你有三分鐘時間。" 
             },
             { 
                 page: 19, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXfrF2bSixmguZjTxnpz_ZfCH1Nsbe4g_QNF4x8ZVqI6s3qtZGaZUT7oXqdHSYF4txxk4OG2tCfcwIBDfUUIgYMXPfPeHx-bN3ORSg6Q_ts9OxPpkszpzbF_vaLFLF5FXbM?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "Let’s share your observations. One observation per group. No repeats. Thank you, that’s a good observation.", 
+                english: " One observation per group. No repeats. Thank you, that’s a good observation.", 
                 chinese: "讓我們分享大家的觀察。每組一個觀察結果。不重複。謝謝，這是一個很好的觀察。" 
             },
             { 
