--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -190,7 +190,7 @@
             { 
                 page: 19, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXfrF2bSixmguZjTxnpz_ZfCH1Nsbe4g_QNF4x8ZVqI6s3qtZGaZUT7oXqdHSYF4txxk4OG2tCfcwIBDfUUIgYMXPfPeHx-bN3ORSg6Q_ts9OxPpkszpzbF_vaLFLF5FXbM?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: " One observation per group. No repeats. Thank you, that’s a good observation.", 
+                english: " One observation per group. No repeats.Which group would like to go first? Thank you, that’s a good observation.", 
                 chinese: "讓我們分享大家的觀察。每組一個觀察結果。不重複。謝謝，這是一個很好的觀察。" 
             },
             { 
