--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -178,7 +178,7 @@
             { 
                 page: 17, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXfUfM1HkFQPvRfRnmKmtLB2UD25mrqigYyYRgNNfYOQkYH8FWOM8Mzo1Cv_XtBU8kOEbL1RBM2emeMfp2QdI3l6jXaPs-lbZiAnc1LGqETBAJOoO7RUwzLPDqAbu1b-Sfs?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "After the simulation, please write your observations on your worksheet.", 
+                english: "Finally, summarize the results of the experiment and write them on your worksheet.", 
                 chinese: "模擬結束後，請將你的觀察結果寫在工作表上。" 
             },
             { 
