--- a/SA/ElectromagneticInduction1.html
+++ b/SA/ElectromagneticInduction1.html
@@ -148,7 +148,7 @@
             { 
                 page: 12, 
                 image: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXdaAwmmTPqGqmnP4wj8MVRwT_KdctKQg2-dgZu8zhv75lhV1E9MhKq04yRIGZvV1xdKJUN8Mxn1K2TXdk2yAcsB4lEFHqajPwvl5ihEF92HmIebLAhj9zqf__d-6-hwUYM?key=m9JcCzJQtFRtfPvlNcMUZw", 
-                english: "In fact, this is true. We call this “induced current.” It is an important concept in this unit.", 
+                english: "In fact, this is true. We call this “induced current.” It is a key concept in this unit.", 
                 chinese: "事實上，這是真的。我們稱這種電流為「感應電流」。" 
             },
             { 
