--- a/physics.html
+++ b/physics.html
@@ -611,7 +611,7 @@
       <h3 class="sub-title">學習資源</h3>
       <ul class="sub-menu">
          <li><a href="https://drive.google.com/drive/folders/1C2_FuqEmGk-B84c1rZVpLKzp0a8Guxmb?usp=sharing">課程檔案</a></li>
-         <li><a href="https://guidephy.github.io/physicsReview.html">高三複習</a></li>
+         <li><a href="https://drive.google.com/drive/folders/1vg_oBGhv3waX9Y02AgsG2tSPWsp008pq?usp=drive_link">歷年模擬考>TR></li>
          <li><a href="https://guidephy.github.io/Ophysics">Guidephy物理自學</a></li>
          <li><a href="/SA/magneticEffectOfCurrent .html">電流磁效應</a></li>
         <li><a href="/SA/ElectromagneticInduction.html">電磁感應</a></li>
@@ -645,27 +645,3 @@
   </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
