--- a/paperBarkTree.html
+++ b/paperBarkTree.html
@@ -65,7 +65,7 @@
                 title: "關卡一：誰住在這條步道？",
                 type: "quiz",
                 icon: Icons.MapPin,
-                story: `【在地傳說：石頭變神明？】<br><br>很久很久以前，這裡是一片荒涼的溪流。有一天，一位農夫在溪水裡發現了一顆石頭，形狀長得非常像「觀音菩薩」。<br><br>農夫覺得這是一個奇蹟，於是將石頭撿回家供奉，後來這裡的人越來越多，大家就習慣把這個地方叫做「觀音」。<br><br>這個地名，其實是先有人們的發現，才有後來的信仰喔！`,
+                storyImage: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXcjBwnvF6BgSV_VborXORq_8hEtUvXqKsA5F1ZZyzuAXxGga8x-ynq-NNerUdUAtcs5DlJgQ5RzflXLFQFOvatcRcvbJ4QJumnSxBVldukQjB1Xpl_RY9D_V8mRQF7VBprqcZ8CS8Qri8XCYd-LZAyx?key=FHIAIJ-gaW42Wi8RxY0FKw",
                 question: "根據剛剛的故事，為什麼這個地方叫「觀音」？",
                 options: [
                     { id: 'A', text: "A. 因為這裡以前很多觀音鳥" },
@@ -81,7 +81,7 @@
                 title: "關卡二：千層不是蛋糕",
                 type: "matching",
                 icon: Icons.Wind,
-                story: `【植物知識：穿著厚外套的樹】<br><br>這條步道兩旁種滿了「白千層」。它的老家其實在遙遠的澳洲！<br>澳洲的天氣很熱、又乾燥，甚至常常發生森林大火。為了活下來，白千層演化出厲害的裝備：<br><br>1. 它的樹皮像海綿一樣，軟軟的、一層又一層，這是為了「保護大樹不怕火燒」。<br>2. 它的葉子揉一揉有特殊的香味，可以提煉成大家常用的「綠油精」或精油。<br>3. 它的根扎得很深，在海邊可以「擋住強風」。<br>4. 它開的小白花形狀很特別，就像洗杯子的「瓶刷」一樣可愛！<br><br>【為什麼觀音要種它？】<br>其實，觀音海邊的風非常強勁，以前的農作物常被吹壞。所以在幾十年前，人們特地請來這位「澳洲大力士」，把它們排排站種在田邊，變成守護大家的「防風林」！`,
+                storyImage: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXeWdo3lh6WfZBvljRclIvPzLTo6Zw2JLSA4tyFo09uQl3eBGnAZcL4shQTCRMeLimTF_A_4ZwqAkGZMC8AGjIxF5Ls5ZnTcNHur0Scplya_M5IOix1KOrqmd7fhf3jqMbSZK6xK6oJpWKVMqwpyBejm?key=FHIAIJ-gaW42Wi8RxY0FKw",
                 question: "請將白千層的「特徵」連線到正確的「功能」或「形狀」：",
                 leftItems: [
                     { id: 'bark', text: "🌳 樹皮軟軟像海綿" },
@@ -105,7 +105,7 @@
                 title: "關卡三：誰來這裡吃飯？",
                 type: "multiselect",
                 icon: Icons.BookOpen,
-                story: `【生態觀察：24小時的餐廳】<br><br>走在白千層步道，你不只會看到樹。仔細看旁邊，這裡有水田、有埤塘（池塘），還有樹林。<br><br>這樣的環境就像是動物們的「超級餐廳」！<br><br>● 白鷺鷥喜歡在淺水的地方找小魚吃。<br>● 青蛙需要在濕濕的泥土或水邊產卵。<br>● 樹林則提供了躲藏的地方。<br><br>這裡不是沙漠，也不是冰原，而是一個溫暖潮濕的家。`,
+                storyImage: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXfDknyM3O2DBhlKcH8FoqsHvqFCWSgaCNT-ov0PhbikRogvCwYEiPPb0HRRf4AlN2SgvAlCQ7PD72dCFvOOdN_mgGMdU-5Zf2s9j6eLZo3nHJkHmA_-GI98eqTBcZl9XzEJUG0xHZAJwBgOV1UDNRER?key=FHIAIJ-gaW42Wi8RxY0FKw",
                 question: "哪些動物「最可能」把這裡當成家？(請選 2 個)",
                 options: [
                     { id: 'bird', text: "🐦 白鷺鷥" },
@@ -122,7 +122,7 @@
                 title: "關卡四：世界在做一樣的事",
                 type: "matching",
                 icon: Icons.Globe,
-                story: `【樹木外交：世界知名的樹林步道】<br><br>世界各地都有以「樹」為主角的步道，但因為當地的環境與樹種不同，這些步道的設計與任務也完全不一樣喔！<br><br>🇹🇼 台灣：觀音的「白千層林道」，整排樹木像是綠色長城，任務是「擋風」來保護旁邊的農田。<br><br>🇦🇺 澳洲：在「巨樹谷」有一種很珍貴的紅叮格樹，為了保護老樹的根部不被踩死，人們蓋了很高的「天空步道」，讓大家走在樹冠層。<br><br>🇸🇬 新加坡：在「麥里芝水庫」有知名的樹頂吊橋，連結了破碎的雨林棲地，讓猴子、松鼠等動物可以安全地在城市裡移動。<br><br>🇯🇵 日本：長野縣的「赤澤自然休養林」，擁有美麗的檜木林，是「森林浴」的發源地，走在裡面深呼吸可以療癒身心。`,
+                storyImage: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXcIi2pWQ9nCEoNG0jgE-hiYzdBLb6bujUOA25C_VSEp5ZWxNvm_vC057Pnsy6i6r_5BW8qX9nKOyldnP5RAkE-usIxYvHGdOOh5nY-r9-5wCUyUgTKzKRBPtUorpSc5A94xSfBKPnLS1P6PwgQD3GMG?key=FHIAIJ-gaW42Wi8RxY0FKw",
                 question: "請根據剛剛的文本，將國家知名步道連線到正確的「步道目的」：",
                 leftItems: [
                     { id: 'tw', text: "🇹🇼 台灣 (白千層林道)" },
@@ -146,7 +146,7 @@
                 title: "最終關：我是步道守護員",
                 type: "sorting",
                 icon: Icons.Shield,
-                story: `【守護宣言】<br><br>恭喜你來到最後一關！<br><br>透過今天的任務，你已經認識了「石觀音」的故事、知道了「白千層」的超能力，也看到了世界各國的做法。<br><br>現在，我們要邀請你成為正式的守護員。在你心中，要維持一條美好的步道，哪些元素是不可或缺的呢？`,
+                storyImage: "https://lh7-rt.googleusercontent.com/docsz/AD_4nXc-wLRxOU-S-pS71wU1JPbmnV5i5Mop-vItODVxmsSnryyukrqYxjbjRg1zQJHi16E08eK8eNezDI-e3mOULZ9TW22R5crw6suAvcvmPnod6_b7c79goS-pLRASvIJfa6OCc7LbvaSOigTZVuKVzPI?key=FHIAIJ-gaW42Wi8RxY0FKw",
                 question: "請「依照重要順序」，依序點選你認為步道最重要的 3 個元素：\n(你的第一選擇，將決定你會成為哪一種守護員喔！)",
                 options: [
                     { id: 'tree', text: "🌳 樹 (自然環境)" },
@@ -292,8 +292,13 @@
             if (state.levelPhase === 'story') {
                 contentHtml = `
                     <div class="p-6 animate-fade-in bg-white min-h-[50vh] flex flex-col">
-                        <div class="prose prose-lg prose-emerald text-gray-700 leading-relaxed whitespace-pre-line mb-8 flex-1 text-base sm:text-lg">
-                            ${data.story}
+                        <div class="mb-8 flex-1 flex items-center justify-center bg-gray-50 rounded-lg overflow-hidden border border-gray-100 shadow-sm">
+                            <img 
+                                src="${data.storyImage}" 
+                                alt="${data.title} 漫畫" 
+                                class="max-w-full h-auto object-contain w-full"
+                                onerror="this.onerror=null;this.parentElement.innerHTML='<div class=\'p-4 text-center text-gray-500\'>😢 漫畫圖片無法載入<br>請檢查網路連線或連結有效性</div>'"
+                            />
                         </div>
                         <button onclick="goToQuiz()" class="w-full bg-emerald-600 active:bg-emerald-700 text-white font-bold py-4 px-6 rounded-xl shadow-lg flex justify-center items-center gap-2 text-lg animate-bounce-subtle mt-auto">
                             <span class="w-6 h-6">${Icons.BookOpen}</span> 我讀完了，開始解謎！
