--- a/paperBarkTree.html
+++ b/paperBarkTree.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>白千層的祕密任務</title>
+    <title>白千層的守護任務</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* 自定義動畫與樣式 */
@@ -201,7 +201,7 @@
                         <div class="bg-emerald-100 w-24 h-24 rounded-full flex items-center justify-center mx-auto mb-6 text-emerald-600">
                             ${Icons.Globe.replace('width="24"', 'width="48"').replace('height="24"', 'height="48"')}
                         </div>
-                        <h1 class="text-3xl font-bold text-gray-800 mb-2">白千層的祕密任務</h1>
+                        <h1 class="text-3xl font-bold text-gray-800 mb-2">白千層的守護任務</h1>
                         <p class="text-emerald-700 font-medium mb-6">觀音步道守護者捎來了一則訊息...</p>
                         
                         <div class="bg-gray-50 p-5 rounded-lg text-left text-gray-600 text-sm mb-8 leading-relaxed border border-gray-200 shadow-inner">
@@ -273,7 +273,7 @@
                         </div>
 
                         <button onclick="window.location.reload()" class="w-full bg-gray-800 active:bg-gray-900 text-white font-bold py-3 px-6 rounded-xl shadow-lg text-lg">
-                            再次挑戰 / 分享給朋友
+                            再次挑戰
                         </button>
                     </div>
                 </div>
@@ -416,7 +416,7 @@
                     </div>
                     
                     <p class="text-center text-gray-400 text-xs py-6 bg-gray-50 mt-auto">
-                        © 觀音白千層步道守護計畫
+                        © 觀音高中國際教育社群
                     </p>
                 </div>
             `;
